# goit-pycore-fastdev-FinalProject

./: .gitignore  README.md  address_book.pkl  address_book.py  guesser.py  handlers.py  main.py  pyproject.toml  requirements.txt  storage.py
classbot/: __init__.py  address_book.py  console.py  decorators.py  guesser.py  handlers.py  main.py  notebook.py  storage.py
